<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoodMate</string>
    <string name="title_overview">Overview</string>
    <string name="title_receipts">Receipts</string>
    <string name="title_pantry">Pantry</string>
    <string name="title_wishlist">Wish List</string>
    <string name="title_shoppinglist">Shopping List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_header">Signup For FoodMate!</string>
    <string name="food_detail_edit">Edit Price</string>
    <string name="food_detail_add">Add to Wishlist</string>
    <string name="food_detail_remove">Remove from Wishlist</string>
    <string name="food_detail_price">Price</string>
    <string name="food_detail_last_purchased">Last Purchased</string>
    <string name="food_detail_expiration_date">Expiration Date</string>
    <string name="food_detail_barcode">Barcode Data</string>
    <string name="shopping_list_split_cost">Split Cost</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="venmo_activity">VenmoActivity</string>

</resources>
